@@ -1,3 +1,8 @@
+2001-12-17  Bradford Hovinen  <hovinen@ximian.com>
+
+	* applier.c (applier_get_preview_widget): Make sure the pixmap is
+	masked correctly
+
 2001-12-07  Bradford Hovinen  <hovinen@ximian.com>
 
 	* preferences.c (read_color_from_string): Check if string is
